# GtkStochastic

./: .gitignore  README.md  meson.build  rodoco.prg.GtkStochastic.json
StochasticLib/: meson.build
StochasticLib/src/: meson.build
StochasticLib/src/poisson/: ImageUtils.cpp  PoissonGenerator.h  cairoUtils.cpp  cairoUtils.hpp  libstochastic.vapi  meson.build  sd.cpp  stochasticLib.cpp  stochasticLib.h  structs.hpp  testlib.vala
StochasticLib/src/poisson/argparse/: meson.build
StochasticLib/src/poisson/delaunator/: meson.build
StochasticLib/src/poisson/mathc/: meson.build
data/: meson.build  rodoco.prg.GtkStochastic.appdata.xml.in  rodoco.prg.GtkStochastic.desktop.in  rodoco.prg.GtkStochastic.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  gtkstochastic.gresource.xml  libstochastic.vapi  main.vala  meson.build  stochasticDrawingArea.vala  window.ui  window.vala
